--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 		    Press A to rotate counterclockwise<br>
 		    Press D to rotate clockwise<br>
 		    Press H to go hyperspace<br>
+		    Press Spacebar to shoot<br>
 	    </footer>
 	</body>
 </html>
