--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 			<h1>Asteroids</h1>
 		</header>
 			<section id="content">
-				<canvas id="<canvas id="AsteroidsGame" data-processing-sources="Bullet.pde Asteroid.pde AsteroidsGame.pde Floater.pde Spaceship.pde Star.pde"> </canvas>">
+				<canvas id="AsteroidsGame" data-processing-sources="Bullet.pde Asteroid.pde AsteroidsGame.pde Floater.pde Spaceship.pde Star.pde">
 				</canvas>
 		    </section>
 	    <footer>
@@ -21,6 +21,7 @@
 		    Press A to rotate counterclockwise<br>
 		    Press D to rotate clockwise<br>
 		    Press H to go hyperspace<br>
+		    Press Spacebar to shoot<br>
 	    </footer>
 	</body>
 </html>
